multi-user implementation