@@ -42,19 +42,19 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(Arrays.asList(
-                "https://pos-frontend-blue-three.vercel.app",
-                "https://pos-frontend-2uxryhvgy-chalana001s-projects.vercel.app",// Live Frontend
-                "http://localhost:5173", // Local (Vite)
-                "http://localhost:3000"  // Local (CRA)
+        config.setAllowedOriginPatterns(Arrays.asList(
+                "http://*.localhost:[*]",
+                "http://localhost:[*]",
+                "https://*.chalanawijesingha.xyz"
         ));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Tenant-ID"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
     }
 
